Closed
Bug 773929
Opened 11 years ago
Closed 11 years ago
Youtube HTML5 resize buttons(Small/Large player) in video controls are missing
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
VERIFIED
FIXED
mozilla17
People
(Reporter: alice0775, Assigned: luke)
References
Details
(Keywords: regression)
Attachments
(1 file)
963 bytes,
patch
|
bhackett1024
:
review+
akeybl
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
Build Identifier: http://hg.mozilla.org/mozilla-central/rev/131961e5e0d1 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:16.0) Gecko/16.0 Firefox/16.0a1 ID:20120612030527 this is regression of Bug 765956 Steps to Reproduce: 1. Create clean profile 2. Open http://www.youtube.com/watch?v=BRG5VNNUq_E&hd=1&html5=1 Actual Results: Resize buttons(Small/Large player) are missing. m-i hourly build: last good is mozilla-inbound changeset e3c30588f319 first bad is mozilla-inbound changeset 67e09e165ce6 http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=e3c30588f319&tochange=67e09e165ce6 In local build Last Good: 749d103d8636 First Bad: d9650bc4da1a
![]() |
Reporter | |
Updated•11 years ago
|
tracking-firefox16:
--- → ?
![]() |
Reporter | |
Comment 1•11 years ago
|
||
Err Correct Build Identifier: http://hg.mozilla.org/mozilla-central/rev/6489be1890c0 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:16.0) Gecko/16.0 Firefox/16.0 ID:20120713030548 And also reproduced in latest hourly http://hg.mozilla.org/mozilla-central/rev/0602e44ac248 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:16.0) Gecko/16.0 Firefox/16.0 ID:20120713204920
![]() |
Assignee | |
Comment 2•11 years ago
|
||
The problem is that bug 765956 removed an "|| fun->script->isInnerFunction" guard in CheckNewScriptProperties. Why this matters isn't clear and I filed bug 774463 to investigate. In the meantime, the quick fix is to restore the old behavior by disallowing CheckNewScriptProperties on inner functions.
Updated•11 years ago
|
Attachment #642737 -
Flags: review?(bhackett1024) → review+
![]() |
Assignee | |
Comment 3•11 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/1a3441f550c0
status-firefox16:
--- → affected
Target Milestone: --- → mozilla17
![]() |
Assignee | |
Comment 4•11 years ago
|
||
Comment on attachment 642737 [details] [diff] [review] fix [Approval Request Comment] Bug caused by (feature/regressing bug #): 765956 User impact if declined: wrong website behavior Testing completed (on m-c, etc.): m-c Risk to taking this patch (and alternatives if risky): low, restoring old behavior
Attachment #642737 -
Flags: approval-mozilla-aurora?
Comment 5•11 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/1a3441f550c0
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Comment 6•11 years ago
|
||
Comment on attachment 642737 [details] [diff] [review] fix [Triage Comment] Low risk html5 video player fix for a regression in FF16. Approved for Aurora 16.
Attachment #642737 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Updated•11 years ago
|
![]() |
Assignee | |
Comment 7•11 years ago
|
||
https://hg.mozilla.org/releases/mozilla-aurora/rev/b7078bf947ea
Comment 8•11 years ago
|
||
Verified fixed on FF 16.0a2 (2012-07-30): Mozilla/5.0 (Windows NT 6.1; WOW64; rv:16.0) Gecko/16.0 Firefox/16.0
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•