Bug 773929 - Restore pre-bug 765956 behavior in CheckNewScriptProperties (r=bhackett)

--HG--
extra : rebase_source : ffa490e628a71102886f56207a994e0c7fbdd4ab